--- a/OrganizadorDeTareas/app/templates/LandingPage.html
+++ b/OrganizadorDeTareas/app/templates/LandingPage.html
@@ -48,13 +48,13 @@
         </div>
         <ul class="list-unstyled components text-left">
             <li>
-                <a href="#">Inicio</a>
+                <a href="/app">Inicio</a>
             </li>
             <li>
                 <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Perfil</a>
                 <ul class="collapse list-unstyled text-left" id="pageSubmenu">
                     <li>
-                        <a href="../Prototypes/UserProfile.html">Mi Perfil</a>
+                        <a href="/app/user">Mi Perfil</a>
                     </li>
                     <li>
                         <a href="#">Seguridad</a>
@@ -76,6 +76,7 @@
             <button type="button" class="btn btn-danger">Cerrar Sesión</button>
         </ul>
     </nav>
+    {% block body %}
     <!--EL RESTO-->
     <div class="container-fluid text-center p-4 main">
         <div class="row p-2 mx-2 rounded shadow table-success">
@@ -666,6 +667,7 @@
             </div>
         </div>
     </div>
+    {% endblock %}
 </div>
 </body>
 
