--- a/OrganizadorDeTareas/app/templates/LandingPage.html
+++ b/OrganizadorDeTareas/app/templates/LandingPage.html
@@ -54,16 +54,16 @@
                 <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Perfil</a>
                 <ul class="collapse list-unstyled text-left" id="pageSubmenu">
                     <li>
-                        <a href="/app/user">Mi Perfil</a>
+                        <a href="/app/user-profile">Mi Perfil</a>
                     </li>
                     <li>
-                        <a href="#">Seguridad</a>
+                        <a href="/app/user-security">Seguridad</a>
                     </li>
                     <li>
-                        <a href="#">Amigos</a>
+                        <a href="/app/user-friends">Amigos</a>
                     </li>
                     <li>
-                        <a href="#">Mis Actividades</a>
+                        <a href="/app/user-activities">Mis Actividades</a>
                     </li>
                 </ul>
             </li>
