--- a/OrganizadorDeTareas/app/templates/UserProfile.html
+++ b/OrganizadorDeTareas/app/templates/UserProfile.html
@@ -19,19 +19,19 @@
             <div class="col offset-sm-2 col-sm-8">
                 <ul class="nav nav-tabs" id="pestañas-perfil-de-usuario" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link nav-link-fix active" id="profile-tab-mi-perfil" data-toggle="tab"
+                        <a class="nav-link nav-link-fix {% if active_tab == 'perfil' %}active{% endif %}" id="profile-tab-mi-perfil" data-toggle="tab"
                            href="#Perfil" role="tab" aria-controls="home" aria-selected="true">Mi Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-fix" id="profile-tab-seguridad" data-toggle="tab" href="#Seguridad"
+                        <a class="nav-link nav-link-fix {% if active_tab == 'seguridad' %}active{% endif %} id="profile-tab-seguridad" data-toggle="tab" href="#Seguridad"
                            role="tab" aria-controls="profile" aria-selected="false">Seguridad</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-fix" id="contact-tab-amigos" data-toggle="tab" href="#Amigos"
+                        <a class="nav-link nav-link-fix {% if active_tab == 'amigos' %}active{% endif %}" id="contact-tab-amigos" data-toggle="tab" href="#Amigos"
                            role="tab" aria-controls="contact" aria-selected="false">Amigos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-fix" id="contact-tab-actividades" data-toggle="tab"
+                        <a class="nav-link nav-link-fix {% if active_tab == 'actividades' %}active{% endif %}" id="contact-tab-actividades" data-toggle="tab"
                            href="#Actividades" role="tab" aria-controls="contact" aria-selected="false">Mis
                             Actividades</a>
                     </li>
@@ -44,7 +44,7 @@
             <div class="tab-content p-4 offset-sm-2 col-sm-8" id="myTabContent">
 
                 <!--PESTAÑA MI PERFIL-->
-                <div class="tab-pane fade show active" id="Perfil" role="tabpanel" aria-labelledby="Perfil-tab">
+                <div class="tab-pane fade show {% if active_tab == 'perfil' %}active{% endif %}" id="Perfil" role="tabpanel" aria-labelledby="Perfil-tab">
                     <form>
                         <!--Nombre-->
                         <fieldset disabled>
@@ -85,7 +85,7 @@
                 </div>
 
                 <!--PESTAÑA SEGURIDAD-->
-                <div class="tab-pane fade show disabled" id="Seguridad" role="tabpanel" aria-labelledby="Seguridad-tab">
+                <div class="tab-pane fade show disabled {% if active_tab == 'seguridad' %}active{% endif %}" id="Seguridad" role="tabpanel" aria-labelledby="Seguridad-tab">
                     <form>
                         <!--Contraseña actual-->
                         <fieldset disabled>
@@ -115,7 +115,7 @@
                 </div>
 
                 <!--PESTAÑA AMIGOS-->
-                <div class="tab-pane fade" id="Amigos" role="tabpanel" aria-labelledby="Amigos-tab">
+                <div class="tab-pane fade show {% if active_tab == 'amigos' %}active{% endif %}" id="Amigos" role="tabpanel" aria-labelledby="Amigos-tab">
 
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Buscar amigos"
@@ -259,41 +259,41 @@
                 </div>
 
                 <!-- PESTAÑA ACTIVIDADES -->
-                <div class="tab-pane fade" id="Actividades" role="tabpanel" aria-labelledby="Actividades-tab">
+                <div class="tab-pane fade {% if active_tab == 'actividades' %}show{% endif %} active" id="Actividades" role="tabpanel" aria-labelledby="Actividades-tab">
 
                     <button type="button" class="btn btn-primary btn-lg btn-block"> Crear una nueva actividad</button>
 
                     <div class="card spaced">
                         <div class="card-body sleep-activity text-white">
-                            <img src="img/bed.png" class="activity-icon invert-color mx-2"> Dormir
+                            <img src="/static/img/bed.png" class="activity-icon invert-color mx-2"> Dormir
                             <button type="button" class="btn btn-sm btn-primary float-right"> Ver info</button>
                         </div>
                     </div>
 
                     <div class="card spaced">
                         <div class="card-body study-activity text-white">
-                            <img src="img/open-book.png" class="activity-icon invert-color mx-2"> Estudiar
+                            <img src="/static/img/open-book.png" class="activity-icon invert-color mx-2"> Estudiar
                             <button type="button" class="btn btn-sm btn-primary float-right"> Ver info</button>
                         </div>
                     </div>
 
                     <div class="card spaced">
                         <div class="card-body eat-activity text-white">
-                            <img src="img/crossed-knife-and-fork.png" class="activity-icon invert-color mx-2"> Almorzar
+                            <img src="/static/img/crossed-knife-and-fork.png" class="activity-icon invert-color mx-2"> Almorzar
                             <button type="button" class="btn btn-sm btn-primary float-right"> Ver info</button>
                         </div>
                     </div>
 
                     <div class="card spaced">
                         <div class="card-body house-activity text-white">
-                            <img src="img/washing-machine.png" class="activity-icon invert-color mx-2"> Lavar ropa
+                            <img src="/static/img/washing-machine.png" class="activity-icon invert-color mx-2"> Lavar ropa
                             <button type="button" class="btn btn-sm btn-primary float-right"> Ver info</button>
                         </div>
                     </div>
 
                     <div class="card spaced">
                         <div class="card-body animal-activity text-white">
-                            <img src="img/snowshoe-cat.png" class="activity-icon invert-color mx-2"> Jugar con el Michi
+                            <img src="/static/img/snowshoe-cat.png" class="activity-icon invert-color mx-2"> Jugar con el Michi
                             <button type="button" class="btn btn-sm btn-primary float-right"> Ver info</button>
                         </div>
                     </div>
