pequennos cambios en las referencias del sidebar

--- a/OrganizadorDeTareas/app/templates/LandingPage.html
+++ b/OrganizadorDeTareas/app/templates/LandingPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Página de Inicio</title>
+    {% block titulo %}<title>Página de Inicio</title>{% endblock %}
     <!-- BOOTSTRAP CSS, DO NOT DELETE -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css">
@@ -68,7 +68,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#">Otra cosa</a>
+                <a href="https://www.reddit.com/r/memes/">Otra cosa</a>
             </li>
         </ul>
 
