--- a/OrganizadorDeTareas/app/templates/UserProfile.html
+++ b/OrganizadorDeTareas/app/templates/UserProfile.html
@@ -11,7 +11,24 @@
         <div class="row py-4">
             <div class="col text-center">
                 <p class="h4 text-center text-dark">Nombre de usuario</p>
-                <button type="button" class="btn btn-success">Cambiar imagen</button>
+                    <form id="form_86023" class="appnitro" enctype="multipart/form-data" method="post" action="">
+                        <div class="form_description">
+                            <h2>Untitled Form</h2>
+                            <p>This is your form description. Click here to edit.</p>
+                        </div>
+                        <ul >
+                            <li id="li_1" >
+                                <label class="description" for="element_1">Cambiar Imagen </label>
+                                <div>
+                                    <input id="element_1" name="element_1" class="element file" type="file"/>
+                                </div>
+                            </li>
+                            <li class="buttons">
+                        <input type="image" name="form_id" value="" />
+                        <input id="saveForm" class="button_text" type="submit" name="submit" value="Submit" />
+                </li>
+                    </ul>
+                </form>
             </div>
         </div>
 
