--- a/OrganizadorDeTareas/app/templates/Unlogged.html
+++ b/OrganizadorDeTareas/app/templates/Unlogged.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<div class="page">
+
 <div class="container">
       
             
@@ -35,6 +35,7 @@
     <input type="email" class="form-control bg-light px-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba el correo electrónico">
     
   </div>
+        </form>
    </div>
     </div>
   <div class="form-group">
@@ -80,7 +81,7 @@
 
 
     </div>
-</div>
+
 
 
 
