Avanzada el registro y login de cuentas nuevas
Creados nuevos forms de Django, que reemplaze en el template, registre un usuario admin y si se esta registrado el landing page cambia al de usuarios registrados.

--- a/OrganizadorDeTareas/app/templates/Unlogged.html
+++ b/OrganizadorDeTareas/app/templates/Unlogged.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load widget_tweaks %}
 <html lang="en">
 
 <head>
@@ -29,7 +30,7 @@
 		<div class="container">
   <div class="row">
     <div class="col-sm">
-        <form>
+        <!-- <form>
   <div class="form-group ">
     <label for="exampleInputEmail1">Correo electrónico</label>
     <input type="email" class="form-control bg-light px-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba el correo electrónico">
@@ -49,6 +50,21 @@
   <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
 </div>
+-->		
+		<form action="/app/landing" method="post">
+    {% csrf_token %}
+	{% for field in form.visible_fields %}
+	
+    <div class="form-group">
+      {{ field.label_tag }}
+      {{ field }}
+      {% if field.help_text %}
+        <small class="form-text text-muted">{{ field.help_text }}</small>
+      {% endif %}
+    </div>
+  {% endfor %}
+    <button type="submit" class="btn btn-primary">Enviar</button>
+</form>
         <ul class="list-unstyled text-center py-4">
 		¿No tienes cuenta? &nbsp;
             <a href="/app/registro"><button type="button" class="btn btn-primary">Crear cuenta</button></a>
@@ -57,7 +73,8 @@
     </nav>
 	
 	<nav id="sidebar2">
-<div class="sidebar-header text-center py-5">
+<div class="sidebar-header text-center py-4">
+    <br>
             <h1>Acerca del proyecto</h1>
         </div>
 		
