--- a/OrganizadorDeTareas/app/templates/Registro.html
+++ b/OrganizadorDeTareas/app/templates/Registro.html
@@ -32,45 +32,56 @@
 		<div class="container">
   <div class="row">
     <div class="col-sm">
-        <form>
-  <div class="form-group ">
+        <!--<form enctype="multipart/form-data" method="POST" >
+          
+          
+  
     <label for="exampleInputEmail1">Correo electrónico</label>
     <input type="email" class="form-control bg-light px-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba el correo electrónico">
     
-  </div>
+ 
    </div>
     </div>
 	<div class="row">
     <div class="col-sm">
-        <form>
-  <div class="form-group ">
+        
+  
     <label for="exampleInputEmail1">Nombre </label>
     <input type="text" class="form-control bg-light px-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba su nombre">
     
-  </div>
+  
    </div>
     </div>
 	<div class="row">
     <div class="col-sm">
-        <form>
-  <div class="form-group ">
+        
+  
     <label for="exampleInputEmail1">Apellido</label>
     <input type="text" class="form-control bg-light px-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba su apellido">
     
-  </div>
+  
    </div>
     </div>
-  <div class="form-group">
+  
     <label for="exampleInputPassword1">Contraseña</label>
     <input type="password" class="form-control bg-light px-2" id="exampleInputPassword1" placeholder="Contraseña">
-  </div>
-  <div class="form-group">
+  
+  
     <label for="exampleInputPassword1">Confirmar contraseña</label>
     <input type="password" class="form-control bg-light px-2" id="exampleInputPassword1" placeholder="Vuelva a escribir su contraseña">
-  </div>
   
+  <br>
   <button type="submit" class="btn btn-primary">Registrar</button>
+  
 </form>
+-->
+<form action="/app/landing" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Registrar</button>
+</form>
+
+
 </div>
         
 		
