--- a/OrganizadorDeTareas/app/templates/Unlogged.html
+++ b/OrganizadorDeTareas/app/templates/Unlogged.html
@@ -53,16 +53,10 @@
 -->		
 		<form method="POST">
     {% csrf_token %}
-	{% for field in form.visible_fields %}
+	{{ form.as_p }}
 	
-    <div class="form-group">
-      {{ field.label_tag }}
-      {{ field }}
-      {% if field.help_text %}
-        <small class="form-text text-muted">{{ field.help_text }}</small>
-      {% endif %}
-    </div>
-  {% endfor %}
+	
+  
     <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
 
