--- a/OrganizadorDeTareas/app/templates/Registro.html
+++ b/OrganizadorDeTareas/app/templates/Registro.html
@@ -75,7 +75,7 @@
   
 </form>
 -->
-<form method="post">
+<form enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Registrar</button>
