--- a/OrganizadorDeTareas/app/templates/Unlogged.html
+++ b/OrganizadorDeTareas/app/templates/Unlogged.html
@@ -14,12 +14,13 @@
 <body>
 
 
-<div class="container">
+<div class="container" >
       
             
 			
     <!--SIDEBAR-->
-    <nav id="sidebar">
+
+    <nav id="sidebar3">
         <div class="sidebar-header text-center py-5">
             <h1>LOGO</h1>
         </div>
@@ -30,31 +31,47 @@
 		<div class="container">
   <div class="row">
     <div class="col-sm">
-        <!-- <form>
-  <div class="form-group ">
-    <label for="exampleInputEmail1">Correo electrónico</label>
-    <input type="email" class="form-control bg-light px-2" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Escriba el correo electrónico">
-    
-  </div>
-        </form>
-   </div>
-    </div>
-  <div class="form-group">
-    <label for="exampleInputPassword1">Contraseña</label>
-    <input type="password" class="form-control bg-light px-2" id="exampleInputPassword1" placeholder="Contraseña">
-  </div>
-  <div class="form-group form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Mantenme logeado</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Enviar</button>
-</form>
-</div>
--->		
+        
 		<form method="POST">
-    {% csrf_token %}
-	{{ form.as_p }}
-	
+    
+	  {% csrf_token %}
+
+  {% for hidden_field in form.hidden_fields %}
+    {{ hidden_field }}
+  {% endfor %}
+
+  {% if form.non_field_errors %}
+    <div class="alert alert-danger" role="alert">
+      {% for error in form.non_field_errors %}
+        {{ error }}
+      {% endfor %}
+    </div>
+  {% endif %}
+
+  {% for field in form.visible_fields %}
+    <div class="form-group">
+      {{ field.label_tag }}
+
+      {% if form.is_bound %}
+        {% if field.errors %}
+          {% render_field field class="form-control bg-light px-2 " %}
+          {% for error in field.errors %}
+            <div class="invalid-feedback">
+              {{ error }}
+            </div>
+          {% endfor %}
+        {% else %}
+          {% render_field field class="form-control bg-light px-2 " %}
+        {% endif %}
+      {% else %}
+        {% render_field field class="form-control bg-light px-2" %}
+      {% endif %}
+
+      {% if field.help_text %}
+        <small class="form-text text-muted">{{ field.help_text }}</small>
+      {% endif %}
+    </div>
+  {% endfor %}
 	
   
     <button type="submit" class="btn btn-primary">Enviar</button>
@@ -66,7 +83,7 @@
         </ul>
 		
     </nav>
-	
+	<!--
 	<nav id="sidebar2">
 <div class="sidebar-header text-center py-4">
     <br>
@@ -85,7 +102,7 @@
         </div>
 	
 	</nav>
-	
+	-->
 
     
   
