--- a/OrganizadorDeTareas/app/templates/UserProfile-Avatar.html
+++ b/OrganizadorDeTareas/app/templates/UserProfile-Avatar.html
@@ -2,6 +2,7 @@
 
 {% extends 'LandingPage.html' %}
 {% load customTags %}
+{% load widget_tweaks %}
 {% block titulo %}
 <title>Usuario</title>
 {% endblock %}
@@ -39,12 +40,51 @@ $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
             <div class="col text-center">
 			
                 <p class="h4 text-center text-dark">{{user.nombre}}  {{user.apellido}}</p>
-				
+					
+					<div class="row">
+					<div class="col-sm-5">
+					</div>
+					<div class="col-sm-2">
                     <form  enctype="multipart/form-data" method="POST">
                         {% csrf_token %}
                         
-                            {{ form.as_p }}
-                            
+                              {% for hidden_field in form.hidden_fields %}
+    {{ hidden_field }}
+  {% endfor %}
+
+  {% if form.non_field_errors %}
+    <div class="alert alert-danger" role="alert">
+      {% for error in form.non_field_errors %}
+        {{ error }}
+      {% endfor %}
+    </div>
+  {% endif %}
+
+  {% for field in form.visible_fields %}
+    <div class="form-group">
+      {{ field.label_tag }}
+
+      {% if form.is_bound %}
+        {% if field.errors %}
+          {% render_field field class="form-control bg-light px-2 is-invalid " %}
+          {% for error in field.errors %}
+            <div class="invalid-feedback">
+              {{ error }}
+            </div>
+          {% endfor %}
+        {% else %}
+          {% render_field field class="form-control bg-light px-2 is-valid " %}
+        {% endif %}
+      {% else %}
+        {% render_field field class="form-control bg-light px-2" %}
+      {% endif %}
+
+      {% if field.help_text %}
+        <small class="form-text">{{ field.help_text }}</small>
+      {% endif %}
+    </div>
+  {% endfor %}
+                         </div>     </div>  
                         
                         <button type="submit" name="foto" class="btn btn-primary">Subir</button>
                 
