--- a/OrganizadorDeTareas/app/templates/UserProfile-Password.html
+++ b/OrganizadorDeTareas/app/templates/UserProfile-Password.html
@@ -1,6 +1,7 @@
 
 
 {% extends 'LandingPage.html' %}
+{% load widget_tweaks %}
 {% load customTags %}
 {% block titulo %}
 <title>Usuario</title>
@@ -120,9 +121,44 @@ $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
                 <!--PESTAÑA SEGURIDAD-->
                 <div class="tab-pane fade show disabled {% if active_tab == 'seguridad' %}active{% endif %}" id="Seguridad" role="tabpanel" aria-labelledby="Seguridad-tab">
                     <form method="POST">
-					{% csrf_token %}
-                        
-                        {{form.as_p}}
+					 {% csrf_token %}
+
+  {% for hidden_field in form.hidden_fields %}
+    {{ hidden_field }}
+  {% endfor %}
+
+  {% if form.non_field_errors %}
+    <div class="alert alert-danger" role="alert">
+      {% for error in form.non_field_errors %}
+        {{ error }}
+      {% endfor %}
+    </div>
+  {% endif %}
+
+  {% for field in form.visible_fields %}
+    <div class="form-group">
+      {{ field.label_tag }}
+
+      {% if form.is_bound %}
+        {% if field.errors %}
+          {% render_field field class="form-control bg-light px-2 is-invalid " %}
+          {% for error in field.errors %}
+            <div class="invalid-feedback">
+              {{ error }}
+            </div>
+          {% endfor %}
+        {% else %}
+          {% render_field field class="form-control bg-light px-2 is-valid " %}
+        {% endif %}
+      {% else %}
+        {% render_field field class="form-control bg-light px-2" %}
+      {% endif %}
+
+      {% if field.help_text %}
+        <small class="form-text">{{ field.help_text }}</small>
+      {% endif %}
+    </div>
+  {% endfor %}
 						<button type="submit" name="password" class="btn btn-success">Subir</button>
 
                     </form>
