--- a/OrganizadorDeTareas/static/css/custom2.css
+++ b/OrganizadorDeTareas/static/css/custom2.css
@@ -3,10 +3,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #ffffff
 }
-.page {
-	
-	 overflow-x: scroll;
-}
+
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.2em;
@@ -14,9 +11,21 @@ p {
     line-height: 1.7em;
     color: rgb(255, 255, 255);
 }
-
+html{
+    height: 100%;
+}
 body {
     background-color: #f8f8f8;
+	width:100%;
+	height:100%;
+	overflow:auto;
+}
+
+#container {
+  position: fixed;
+	flex-grow: 1;
+	overflow: auto;
+	min-height: 100%; 
 }
 
 
@@ -75,10 +84,7 @@ a:focus {
     border-bottom: 1px dashed #ddd;
 }
 
-.wrapper {
-    display: flex;
-    width: 125%;
-    position: absolute;
+
 }
 
 .main {
@@ -91,11 +97,11 @@ a:focus {
 #sidebar {
     min-width: 600px;
     max-width: 600px;
-    height: 100%;
+    height: 100vh;
     background: rgb(44, 44, 44);
     color: rgb(224, 224, 224);
     transition: all 0.3s;
-    position: absolute;
+    position: fixed;
 }
 
 #sidebar2 {
@@ -117,6 +123,9 @@ a:focus {
     color: rgb(224, 224, 224);
     transition: all 0.3s;
     position: absolute;
+	min-height: 100%; 
+	
+	
 	margin-left: 250px;
 }
 
