--- a/OrganizadorDeTareas/app/templates/Registro.html
+++ b/OrganizadorDeTareas/app/templates/Registro.html
@@ -19,11 +19,13 @@
             
 			
     <!--SIDEBAR-->
-    <nav id="sidebar3">
+	<div id="sidebar2">
+</div>
+    <div id="sidebar3">
         <div class="sidebar-header text-center py-4">
             <h1>LOGO</h1>
         </div>
-		<div class="sidebar-header text-center py-4">
+		<div class="sidebar-header text-center py-5">
             <h3>Registrar nueva cuenta</h3>
         </div>
         
