--- a/OrganizadorDeTareas/app/templates/Unlogged.html
+++ b/OrganizadorDeTareas/app/templates/Unlogged.html
@@ -19,8 +19,9 @@
             
 			
     <!--SIDEBAR-->
-
-    <nav id="sidebar3">
+<div id="sidebar2">
+</div>
+    <div id="sidebar3">
         <div class="sidebar-header text-center py-5">
             <h1>LOGO</h1>
         </div>
