--- a/OrganizadorDeTareas/static/css/custom2.css
+++ b/OrganizadorDeTareas/static/css/custom2.css
@@ -22,10 +22,11 @@ body {
 }
 
 #container {
-  position: fixed;
+  position: absolute;
 	flex-grow: 1;
-	overflow: auto;
+	overflow: scroll;
 	min-height: 100%; 
+
 }
 
 
@@ -107,26 +108,28 @@ a:focus {
 #sidebar2 {
     min-width: 600px;
     max-width: 600px;
-    height: 100%;
+    height: 100vh;
     background: rgb(44, 44, 44);
-    color: rgb(224, 224, 224);
-    transition: all 0.3s;
-    position: absolute;
-	margin-left: 700px;
-	overflow-wrap: break-word;
+    
+    /*transition: all 0.3s;*/
+    position: fixed;
+	
+	
+	margin-left: 250px;
+	margin-right: 250px;
 }
 #sidebar3 {
     min-width: 600px;
     max-width: 600px;
-    height: 100%;
-    background: rgb(44, 44, 44);
-    color: rgb(224, 224, 224);
-    transition: all 0.3s;
+    height: 100vh;
+    
+    color: rgb(255, 255, 255);
+    /*transition: all 0.3s;*/
     position: absolute;
-	min-height: 100%; 
 	
 	
 	margin-left: 250px;
+	margin-right: 250px;
 }
 
 #sidebar.active {
