--- a/OrganizadorDeTareas/app/templates/Unlogged.html
+++ b/OrganizadorDeTareas/app/templates/Unlogged.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Nombre de la app</title>
+    <title>Inicio</title>
     <!-- BOOTSTRAP CSS, DO NOT DELETE -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/custom2.css">
