se agregan unos botones para facilitar elmovimiento en la pagina

--- a/OrganizadorDeTareas/app/templates/LandingPage.html
+++ b/OrganizadorDeTareas/app/templates/LandingPage.html
@@ -78,6 +78,8 @@
                     </li>
                 </ul>
             </li>
+            {% if user.is_staff%}<li>
+            <a href="/admin">Administar Usuarios</a> </li>{% endif %}
             
         </ul>
 
