--- a/OrganizadorDeTareas/app/templates/Registro.html
+++ b/OrganizadorDeTareas/app/templates/Registro.html
@@ -72,7 +72,17 @@
       {% endif %}
     </div>
   {% endfor %}
-    <button type="submit" class="btn btn-primary">Registrar</button>
+    <div class="row">
+        <div class="col-md-6", style="margin-left: 6%"></div>
+        <h6>¿Ya tienes una cuenta?</h6>
+    </div>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <button type="submit" class="btn btn-primary">Registrar</button>
+        <div class="col-md-3"></div>
+        <a href="/login"><button class="btn btn-primary">Iniciar Sesion</button></a>
+    </div>
+
 </form>
 
 
